--- a/FontoyXamarin/FontoyXamarin/Views/MeteoPage.xaml
+++ b/FontoyXamarin/FontoyXamarin/Views/MeteoPage.xaml
@@ -7,10 +7,26 @@
             <Label Text="Météo du jour" />
 
             <Label Text="Température :" />
-            <Label x:Name="Temp" />
+            <Label x:Name="TempNow" />
 
             <Label Text="Créneau actuel :" />
-            <Label x:Name="HeureCourante" />
+            <Label x:Name="creneauNow" />
+
+            <Label Text="Météo du jour (+6h)" />
+
+            <Label Text="Température :" />
+            <Label x:Name="TempH6" />
+
+            <Label Text="Créneau +6h :" />
+            <Label x:Name="creneauH6" />
+
+            <Label Text="Météo du jour (+12h)" />
+
+            <Label Text="Température :" />
+            <Label x:Name="TempH12" />
+
+            <Label Text="Créneau +12h :" />
+            <Label x:Name="creneauH12" />
         </StackLayout>
         
         
