--- a/FontoyXamarin/FontoyXamarin/MainPage.xaml
+++ b/FontoyXamarin/FontoyXamarin/MainPage.xaml
@@ -128,8 +128,8 @@
                         Grid.Column="0"
                         HasShadow="True"
                         CornerRadius="5"
-                        OutlineColor="#00e600"
-                        BackgroundColor="#00e600"
+                        OutlineColor="#00cc00"
+                        BackgroundColor="#00cc00"
                         HorizontalOptions="FillAndExpand"
                         VerticalOptions="FillAndExpand"
                         Padding="0"
