Flèche de direction du vent

--- a/FontoyXamarin/FontoyXamarin/Views/MeteoPage.xaml
+++ b/FontoyXamarin/FontoyXamarin/Views/MeteoPage.xaml
@@ -22,6 +22,10 @@
                 <Label Text="Vent direction :" />
                 <Label x:Name="VentDirectionNow" />
 
+                <Image 
+                       x:Name="VentDirection" >
+                </Image>
+
                 <Label Text="Nuages :" />
                 <Label x:Name="NebulositeNow" />
 
